Finished Store HomeScreen UI

--- a/Dekkeni/Base.lproj/Main.storyboard
+++ b/Dekkeni/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fRO-AJ-2kx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fA0-n9-SDr">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,13 +17,92 @@
                     <view key="view" contentMode="scaleToFill" id="cxX-48-rVl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLJ-pp-d5n">
+                                <rect key="frame" x="0.0" y="88" width="414" height="90"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="acU-Xe-Jmc">
+                                        <rect key="frame" x="15" y="18" width="339.5" height="45"/>
+                                        <attributedString key="attributedText"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="side-menu" translatesAutoresizingMaskIntoConstraints="NO" id="kcA-Tx-xE0">
+                                        <rect key="frame" x="362.5" y="31.5" width="41.5" height="18"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXP-bJ-Xh4">
+                                        <rect key="frame" x="362.5" y="31.5" width="41.5" height="18"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.75686274509803919" green="0.25882352941176467" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="acU-Xe-Jmc" firstAttribute="leading" secondItem="MLJ-pp-d5n" secondAttribute="leading" constant="15" id="0Vg-sb-S8l"/>
+                                    <constraint firstItem="acU-Xe-Jmc" firstAttribute="height" secondItem="MLJ-pp-d5n" secondAttribute="height" multiplier="0.5" id="3YV-cA-CmE"/>
+                                    <constraint firstItem="kcA-Tx-xE0" firstAttribute="centerY" secondItem="dXP-bJ-Xh4" secondAttribute="centerY" id="8YZ-ND-05h"/>
+                                    <constraint firstItem="acU-Xe-Jmc" firstAttribute="width" secondItem="MLJ-pp-d5n" secondAttribute="width" multiplier="0.82" id="Aps-2g-7J3"/>
+                                    <constraint firstItem="dXP-bJ-Xh4" firstAttribute="centerY" secondItem="acU-Xe-Jmc" secondAttribute="centerY" id="Ipm-M0-tkI"/>
+                                    <constraint firstItem="kcA-Tx-xE0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="acU-Xe-Jmc" secondAttribute="trailing" constant="8" symbolic="YES" id="LoI-F1-7z3"/>
+                                    <constraint firstItem="kcA-Tx-xE0" firstAttribute="centerX" secondItem="dXP-bJ-Xh4" secondAttribute="centerX" id="a1v-vw-rV5"/>
+                                    <constraint firstItem="kcA-Tx-xE0" firstAttribute="width" secondItem="dXP-bJ-Xh4" secondAttribute="width" id="aF8-Ln-67x"/>
+                                    <constraint firstItem="dXP-bJ-Xh4" firstAttribute="height" secondItem="MLJ-pp-d5n" secondAttribute="height" multiplier="0.2" id="bfg-nn-fde"/>
+                                    <constraint firstItem="kcA-Tx-xE0" firstAttribute="height" secondItem="dXP-bJ-Xh4" secondAttribute="height" id="f8w-s6-F0k"/>
+                                    <constraint firstItem="acU-Xe-Jmc" firstAttribute="centerY" secondItem="MLJ-pp-d5n" secondAttribute="centerY" multiplier="0.9" id="fF6-Rs-XE8"/>
+                                    <constraint firstAttribute="trailing" secondItem="dXP-bJ-Xh4" secondAttribute="trailing" constant="10" id="fdn-Im-f7x"/>
+                                    <constraint firstAttribute="height" constant="90" id="rhU-fz-oGC"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="MLJ-pp-d5n" firstAttribute="leading" secondItem="enf-T2-5qM" secondAttribute="leading" id="0ZT-Ks-7fx"/>
+                            <constraint firstItem="MLJ-pp-d5n" firstAttribute="centerX" secondItem="enf-T2-5qM" secondAttribute="centerX" id="lYt-Pn-HQ5"/>
+                            <constraint firstItem="MLJ-pp-d5n" firstAttribute="top" secondItem="enf-T2-5qM" secondAttribute="top" id="ogY-Pl-3lm"/>
+                            <constraint firstItem="MLJ-pp-d5n" firstAttribute="width" secondItem="cxX-48-rVl" secondAttribute="width" id="y2A-2p-F8d"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="enf-T2-5qM"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="pq7-2B-cpo" appends="YES" id="9Pj-S5-tg8"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="NhP-RG-6pw"/>
+                    <connections>
+                        <outlet property="searchTextField" destination="acU-Xe-Jmc" id="rAc-dl-ewn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2g-AI-KMM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="pq7-2B-cpo">
+                    <connections>
+                        <action selector="tapAnywhere:" destination="fRO-AJ-2kx" id="vkd-L0-glV"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1318" y="215"/>
+            <point key="canvasLocation" x="2227.536231884058" y="214.95535714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wd0-ep-YFt">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fA0-n9-SDr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="D1f-3b-qGw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fRO-AJ-2kx" kind="relationship" relationship="rootViewController" id="hCY-9V-k26"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uxy-94-Cwh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1317.3913043478262" y="214.95535714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="side-menu" width="424" height="106"/>
+    </resources>
 </document>
